<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="576dp"
        android:layout_marginEnd="140dp"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="405dp"
        android:layout_height="60dp"
        android:layout_marginTop="64dp"
        android:entries="@array/typesOfName"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="405dp"
        android:layout_height="60dp"
        android:entries="@array/languages"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_spinner"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/genderText"
        android:layout_width="85dp"
        android:layout_height="24dp"
        android:layout_marginBottom="4dp"
        android:text="@string/gender"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/gender_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintVertical_bias="0.833" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="115dp"
        android:layout_height="31dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/nationality"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/language_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_spinner" />

    <TextView
        android:id="@+id/name_container"
        android:layout_width="224dp"
        android:layout_height="268dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="64dp"
        android:scrollHorizontally="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_spinner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="134dp"
        android:layout_height="26dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="24dp"
        android:text="@string/generateNames"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>